<resources>
    <string name="app_name">RidesForMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_filter_carona">Rides4Me - Filtrar Carona</string>
    <string name="field_origem_filter_carona">Bairro Origem *</string>
    <string name="field_destino_filter_carona">Bairro Destino *</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Pedir Carona</string>
    <string name="title_section2">Oferecer Carona</string>
    <string name="title_section3">Perfil</string>
    <string name="title_section4">Contato</string>
    <string name="btnPesquisaFiltro">Pesquisar Carona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btnFiltrar">Filtrar Carona</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_teste_login">TesteLoginActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="action_edit">Editar</string>
    <string name="title_activity_localizacao_carona">Passo 1</string>
    <string name="title_activity_contato">Contato</string>
    <string name="nome_contato">Nome</string>
    <string name="email_contato"></string>
    <string name="mensagem_contato">Mensagem</string>
    <string name="field_origem_carona">Endereço de Origem: </string>
    <string name="field_cidade_carona">Cidade de Origem:</string>
    <string name="field_bairro_carona">Bairro de Origem:</string>
    <string name="field_numero_carona">Número de Origem:</string>
    <string name="field_endereco_destino_carona">Endereço de Destino:</string>
    <string name="field_cidadeDestino_carona">Cidade de Destino:</string>
    <string name="field_bairroDestino_carona">Bairro de Destino:</string>
    <string name="field_numeroDestino_carona">Número de Destino:</string>
    <string name="tipo_contato">Tipo</string>
    <string name="sugestao">Sugestão</string>
    <string name="problema">Problema</string>
    <string name="nota_app">Nota do RidesForMe</string>
    <string name="alert_campo_obrigatorio">Campos Obrigatório</string>
    <string name="alert_radioButtonEmpty">Selecione alguma opção para o Tipo do Contato.</string>
    <string name="alert_warning">Por favor selecione uma das opções para o Tipo de Contato.</string>
    <string name="email_success">Caro Usuário, os seus dados foram computados com sucesso, um e-mail automático foi enviado, por favor verifique a sua caixa de entrada.</string>
    <string name="btn_enviar_email_contato">Enviar</string>
    <string name="entrar_contato">Contato</string>
    <string name="title_activity_carona_passo2">Passo 2</string>
    <string name="exit_dialog_content">Deseja sair do Rides4Me?</string>
    <string name="exit_dialog_title">Sair</string>
    <string name="exit_dialog_agree">Sim</string>
    <string name="exit_dialog_desagree">Não</string>
    <string name="confirm_exit">Pressione voltar novamente para sair</string>
    <string name="login_progress_dialog">Entrando</string>
    <string name="wait">Aguarde…</string>
    <string name="cadastro_progress_dialog">Cadastrando</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="title_activity_pesquisar_carona">Lista Caronas</string>
    <string name="title_activity_filtro_carona">Filtrar Carona</string>
    <string name="title_activity_filter_carona">Filtrar Carona</string>
    <string name="title_activity_detalhe_pesquisa_carona">Detalhe da carona</string>
    <string name="title_notificacao_SolicitarCarona">Rides4Me - Notificação de Solicitação de Carona</string>

</resources>
