<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.ridesforme.ridesforme.ContatoActivity"
    android:background="#00BCD4"
    android:id="@+id/relative">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_contato"
        android:id="@+id/txtViewNomeContato"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/ratingBar"
        android:layout_toStartOf="@+id/ratingBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@null"
        android:id="@+id/txtViewResultadoNomeContato"
        android:layout_alignTop="@+id/txtViewNomeContato"
        android:layout_toRightOf="@+id/txtViewNomeContato"
        android:layout_toEndOf="@+id/txtViewNomeContato"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_contato"
        android:id="@+id/txtViewMensagemContato"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/txtViewResultadoNomeContato"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMensagemContato"
        android:layout_marginTop="24dp"
        android:lines="2"
        android:inputType="textMultiLine"
        android:layout_below="@+id/txtViewMensagemContato"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota_app"
        android:id="@+id/textView4"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/txtViewResultadoNomeContato"
        android:layout_alignStart="@+id/txtViewResultadoNomeContato"
        android:layout_marginTop="25dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar_email_contato"
        android:id="@+id/botao_enviar"
        android:textColor="#00BCD4"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_contato"
        android:id="@+id/textView5"
        android:layout_below="@+id/edtMensagemContato"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewNomeContato"
        android:layout_alignStart="@+id/txtViewNomeContato"
        android:layout_below="@+id/textView5"
        android:id="@+id/linearLayout">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugestao"
                android:layout_weight="1"
                android:checked="false"
                android:id="@+id/rb_sugestao" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problema"
                android:layout_weight="1"
                android:checked="false"
                android:id="@+id/rb_problema" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
